# kelp-core

./: .editorconfig  .gitignore  .waza.yml  404.html  CHANGELOG.md  LICENSE  README.md  cli.html  index.html  kelp_json_schema.json  mkdocs.yml  objects.inv  pyproject.toml
.claude-plugin/: plugin.json
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/skills/kelp-etl-builder/: SKILL.md
.github/skills/kelp-migration/: SKILL.md
.github/skills/kelp-quality-validator/: SKILL.md
.github/workflows/: publish.yml
demos/sample_project/: databricks.demo.yml  databricks.yml
demos/sample_project/resources/: kelp_project_etl.pipeline.yml  kelp_sample_job.job.yml  kelp_sample_job_manifest.job.yml  kelp_sample_job_spark.job.yml  kelp_sample_manifest.pipeline.yml  kelp_sample_sdp.pipeline.yml
docs/: cli.md  getting_started.md  index.md  uc_catalog.md
docs/guides/: 01_sdp.md  02_catalog.md  03_functions_abacs.md  abacs.md  catalog.md  cli.md  functions.md  metric_views.md  normal_spark.md  policies.md  project_config.md  sdp.md  sources.md  transformations.md
docs/integrations/: odcs.md
docs/reference/: catalog.md  config.md  configuration-reference.md  kelp.md  meta.md  metric-views.md  pipelines.md  policies.md  quality-checks-reference.md  sources.md  tables.md  transformations.md
docs/reference/models/: abac.md  catalog.md  function.md  jsonschema.md  metric_view.md  policy.md  policy_definition.md  project_config.md  runtime_context.md  source.md  table.md
guides/: 01_sdp.html  02_catalog.html  SDP.html  abacs.html  catalog.html  cli.html  functions.html  metric_views.html  normal_spark.html  policies.html  project_config.html  sdp.html  sources.html  transformations.html
integrations/: odcs.html
reference/: catalog.html  cli.html  config.html  configuration-reference.html  index.html  kelp.html  meta.html  metric-views.html  pipelines.html  policies.html  quality-checks-reference.html  sources.html  tables.html  transformations.html
reference/models/: abac.html  catalog.html  function.html  jsonschema.html  metric_view.html  policy.html  policy_definition.html  project_config.html  runtime_context.html  source.html  table.html
scripts/: sync_readme_index.py  sync_versions.py
search/: search_index.js  search_index.json
skills/kelp-base/: SKILL.md
skills/kelp-base/references/: kelp-project.md  sdp-pipelines.md
skills/kelp-migration/: SKILL.md
skills/kelp-migration/references/: spark-table-migration.md
src/kelp/: __init__.py  __main__.py  constants.py
src/kelp/catalog/: __init__.py  abac_ddl.py  api.py  function_ddl.py  metric_view_ddl.py  uc_adapter.py  uc_dataper.py  uc_diff.py  uc_models.py  uc_query_builder.py
src/kelp/catalog_legacy/: __init__.py  api.py  uc_adapter.py
src/kelp/cli/: catalog.py  check_policies.py  cli.py  common_params.py  generate_alter_statements.py  generate_ddl.py  get_model.py  init.py  json_schema.py  manifest.py  output.py  sync_from_catalog.py  sync_from_pipeline.py  sync_local_catalog.py  validate.py  version.py
src/kelp/config/: __init__.py  (+8 more)
tests/: README.md  __init__.py  conftest.py
tests/catalog/: conftest.py  test_abac_ddl.py  test_api.py  test_function_ddl.py  test_metric_view_ddl.py  test_uc_adapter.py  test_uc_diff.py  test_uc_query_builder.py
tests/cli/: test_generate_alter_statements.py  test_sync_local_catalog.py
tests/config/: __init__.py  test_catalog_parsing_new_objects.py  test_config_v2.py  test_functions_abacs_fixture.py  test_hierarchy_precedence.py  test_lifecycle.py  test_manifest.py  test_project.py
tests/meta/: test_catalog_filter.py  test_context.py  test_loader_hierarchy.py  test_manifest.py  test_runtime.py  test_spec.py  test_variables.py
tests/models/: __init__.py  test_abac.py  test_catalog.py  test_function.py  test_metric_view.py  test_table.py
tests/pipelines/: __init__.py  test_api.py  test_streaming_tables.py  test_utils.py
tests/service/: __init__.py  test_policy_manager.py  test_table_manager.py  test_yaml_manager.py
tests/tables/: test_api.py  test_materializations_integration.py  test_materializations_quality_integration.py
tests/transformations/: conftest.py  test_functions.py  test_schema.py
(+165 files in other folders)
