[project]
name = "kelp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk>=0.80.0",
    "python-dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "pydantic<3",
    "pyyaml>=6.0",
    "typer>=0.23.0",
]

[project.scripts]
kelp = "kelp.cli.cli:main"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "databricks-labs-dqx>=0.12.0",
    "pyspark[pipelines]>=4.1",
    "faker>=40.4.0",
]
docs = [
    "griffe-pydantic>=1.2.0",
    "griffe2md>=1.3.2",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.2",
]


[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
#preview = true

[tool.ruff.lint]
extend-select = [
    "B",
    "BLE",
    "S",
    "A",
    "C4",
    "I001",
    "T10",
    "ISC",
    "LOG",
    "G",
    "PIE",
    "T20",
    "PT", # try pytest style 
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TD",
    "PTH",
    "N",
    "PERF",
    "D419",
    "UP",
    "FURB",
    "RUF",
]
ignore=["RET504","SIM105"]
#extend-select = ["B","FA","LOG","INP","PIE","T20","Q","RSE","RET","TID","TD","I","N"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.format]
docstring-code-format = true

